integration_tests/codegen_fail/fail/interface/method_default_impl.rs
use juniper::graphql_interface;

#[graphql_interface]
trait Character {
    fn id(&self) -> &str {
        "default"
    }
}

fn main() {}
